--- a/mestyles.css
+++ b/mestyles.css
@@ -49,9 +49,16 @@ a {
     text-decoration-color: white;
 }
 
-a.hover {
+a:hover {
     color: grey;
     text-decoration: underline;
     text-underline-offset: 1rem;
     text-decoration-color: rgb(181, 181, 181);
 }
+
+.logo {
+    font-size: 2rem;    
+}
+ .logo:hover{
+    cursor: default;
+ }
