--- a/mestyles.css
+++ b/mestyles.css
@@ -273,25 +273,25 @@ a:hover {
   gap: 2rem;
   margin-bottom: 2rem;
   margin-top: 2rem;
- 
 }
 
-.about-details-container{
+.about-details-container {
   justify-content: center;
-   flex-direction: column;
+  flex-direction: column;
 }
+
 .about-containers,
-.about-details-container{
+.about-details-container {
   display: flex;
 }
-  
+
 .about-pic {
-  border-radius: 100rem;
+  border-radius: 2rem;
 }
 
 .arrow {
   position: absolute;
-  right: 5rem;
+  right: -5rem;
   bottom: 2.5rem;
 }
 
@@ -305,13 +305,53 @@ a:hover {
   text-align: center;
 }
 
-.section-container{
+.section-container {
   gap: 4rem;
   height: 80%;
 }
 
-.section__pic-container{
+.section__pic-container {
   height: 400px;
   width: 400px;
   margin: auto 0;
+}
+/* Experience Section */
+
+#experience {
+  position: relative;
+}
+
+.experience-sub-title {
+  color: rgb(85, 85, 85);
+  font-weight: 600;
+  font-size: 1.75rem;
+  margin-bottom: 2rem;
+}
+
+.experience-details-container {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.article-container {
+  display: flex;
+  text-align: initial;
+  flex-wrap: wrap;
+  flex-direction: row;
+  gap: 2.5rem;
+  justify-content: space-around;
+  /* transition: transform 0.3s, background-color 0.3s; Smooth transition */
+
+}
+
+article {
+  display: flex;
+  width: 10rem;
+  justify-content: space-around;
+  gap: 0.5rem;
+}
+
+article .icon {
+  cursor: default;
 }
