--- a/mestyles.css
+++ b/mestyles.css
@@ -391,18 +391,18 @@ article .icon {
   height: 70vh;
 }
 
-.contact-info-upper-container{
+.contact-info-upper-container {
   display: flex;
   justify-content: center;
   border-radius: 2rem;
-  border: rgb(53, 53, 53)  0.1rem solid ;
-  border-color:rgb(163, 163, 163);
-  background: (250,250,250);
+  border: rgb(53, 53, 53) 0.1rem solid;
+  border-color: rgb(163, 163, 163);
+  background: (250, 250, 250);
   margin: 2rem auto;
   padding: 0.5rem;
 }
 
-.contact-info-container{
+.contact-info-container {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -410,11 +410,16 @@ article .icon {
   margin: 1rem;
 }
 
-.contact-info-container p{
+.contact-info-container p {
   font-size: larger;
 }
 
-.contact-icon{
+.contact-icon {
   cursor: default;
-  height: 2rem;
 }
+
+.email-icon {
+  height: 2.5rem;
+}
+
+/* footer section */
