--- a/mestyles.css
+++ b/mestyles.css
@@ -423,3 +423,12 @@ article .icon {
 }
 
 /* footer section */
+
+footer{
+  height: 26vh;
+  margin: 0 1rem;
+}
+
+footer p{
+  text-align: center ;
+}
